# auto-routine

./: .gitignore  ADMIN_CREATION_CHANGES.md  COMPLETE_IMPLEMENTATION.md  FIXES_IMPLEMENTED.md  MAP_ROUTING_LOGIC.md  TESTING_GUIDE.md  auto-routine.txt  test.cpp
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  RUN_TESTS.md  TEST_DATA.md  alembic.ini  check_routes_database.py  check_user_role.py  clear_data.py  clear_test_data.py  main.py  pyproject.toml  test_api.py  test_data.py  test_orders.json  test_routing.py  verify_fixes.py
backend/config/: __init__.py  env.py
backend/controllers/: __init__.py  auth.py  orders.py  routes.py  settings.py  staff.py  stores.py
backend/db/: __init__.py  db.py  schema.py
backend/middlewares/: __init__.py  auth.py  logging.py  rbac.py
backend/migrations/: env.py
backend/migrations/versions/: 3538b0e9f3b8_change_it.py  4c237a328b2f_add_holiday_model.py  8f2bbbca7b19_init.py
backend/models/: __init__.py  auth.py  orders.py  purchase.py  routes.py  settings.py  staff.py  stores.py
backend/routes/: __init__.py  admin.py  auth.py  automation.py  dashboard.py  holidays.py  notifications.py  orders.py  products.py  purchase.py  routes.py  settings.py  staff.py  stores.py
backend/scripts/: clear_all_data.py  parse_client_csv.py  test_quantity_splitting.py
backend/services/: __init__.py  distance_matrix.py  route_optimization.py  staff_assignment.py  store_selection.py
backend/utils/: logger.py  order_processing.py  route_optimization.py  staff_assignment.py  store_selection.py  timezone.py
(+57 files in other folders)
